--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
     "socket.io": "^4.5.1",
     "ts-node": "^10.8.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/validator": "^13.7.3"
   }
 }
